# ReFum2D

./: .gitignore  CMakeLists.txt  GFG.msh  README.md  copyResultWindows.sh  requirements.txt  run.sh
FVM/: .gitignore  CMakeLists.txt  README.md
FVM/app/: main.cpp
FVM/include/: Element.h  FVMSolver.h  Mesh.h  Node.h  PhysicalGroup.h
FVM/inputs/: mesh.msh
FVM/src/: FVMSolver.cpp  Mesh.cpp
Introduction_To_Finite_Volume_Vesteeg/: ToyLaplace2D.ipynb
Introduction_To_Finite_Volume_Vesteeg/chapter_4/: example_4.1.ipynb
Introduction_To_Finite_Volume_Vesteeg/chapter_5/: example_5.1.ipynb
Mesh/: Mesh.py  VoronoiDiagram.py
app/: ConvectionBenchmark.h  ConvectionDiffusionBenchmark.h  DiffusionBenchmark.h  Hemker.h  WolframAlpha.h  backward_facing_step.yaml  flow_over_cylinder.yaml  flow_over_cylinder_Re_100.yaml  flow_over_cylinder_Re_20.yaml  kovasznay_flow.yaml  lid.yaml  lid_driven_cavity_flow.yaml  lid_steady.yaml  lid_transient.yaml  main.cpp
docs/: ghia_u_vertical_center_line_y.csv  ghia_v_horizontal_center_line_x.csv
include/: BoundaryCondition.h  Cell.h  Convection.h  Diffusion.h  Edge.h  Element.h  FVMSolver.h  GradientReconstruction.h  Mesh.h  NSSolver.h  NSSolver2.h  Node.h  Orchestrator.h  PhysicalEntity.h  PhysicalGroup.h  ReFumSolver.h  Source.h  pch.h  utils.h
inputs/: 100x100.msh  1026tri.msh  10x10.msh  120tri.msh  16x16.msh  20x20.msh  24x24.msh  250tri.msh  2x2.msh  3x3.msh  4x4.msh  540tri.msh  5x5.msh  6x6.msh  7x7.msh  8x8.msh  backward_complete_40_80.msh  backward_facing_step.geo  backward_facing_step.msh  backward_facing_step.vtk  backward_facing_step_13289_elementos.msh  backward_facing_step_8450_elementos.msh  backward_facing_step_refined.msh  backward_step_incomplete_unstructured.msh  backward_step_laminar_with_parabolic_function.msh  benchmark.msh  benchmark_navier_stokes.msh  cavidade.msh  cavidadeRefinada.msh  cilindro.geo  complexMesh.msh  example.msh  flow_over_a_cylinder_8382.msh  flow_over_cylinder.msh  flow_over_cylinder.vtk  flow_over_cylinder_refined.msh  gaussianPulseTest.msh  kovasznay_15644_elementos.msh  kovasznay_1992_elementos.msh  kovasznay_3962_elementos.msh  (+41 more)
inputs/cylinder/: flow_over_cylinder_benchmark.msh  flow_over_cylinder_benchmark_refined.msh
inputs/regular/: quad_100x100.msh  quad_10x10.msh  quad_200x200.msh  quad_20x20.msh  quad_30x30.msh  quad_40x40.msh  quad_50x50.msh  regular.geo
inputs/triangular/: tri_transf_100x100.msh  tri_transf_10x10.msh  tri_transf_20x20.msh  tri_transf_30x30.msh  tri_transf_40x40.msh  tri_transf_50x50.msh
outputs/: backward_facing_step_Re=100.vtk  backward_facing_step_pressure.vtk  backward_facing_step_velocity.vtk  benchmarkConvection.vtk  benchmarkDiffusion.vtk  cylinder_testecase_2d_1_steady.vtk  diffusao.vtk  flow_over_cyilinder_Re_20.vtk  flow_over_cyilinder_pressure.vtk  flow_over_cyilinder_velocity.vtk  kovasznay_flow.vtk  kovasznay_flow_pressure.vtk  kovasznay_flow_velocity.vtk  lid_driven_cavity.vtk  lid_driven_cavity_50x50.vtk  lid_driven_cavity_pressure.vtk  lid_driven_cavity_velocity.vtk  lid_driven_pressure.vtk  lid_driven_velocity.vtk  mesh1.vtk  mesh3.vtk  p.vtk  p_APPROX.vtk  p_SIMPLE.vtk  p_exact.vtk  p_star.vtk  q30x30.vtk  result.vtk  result2.vtk  reynolds1000.csv  solution.vtk  state.pvsm  u_APPROX.vtk  u_SIMPLE.vtk  u_exact.vtk  u_star.vtk  v_APPROX.vtk  v_SIMPLE.vtk  v_exact.vtk  v_star.vtk  (+2 more)
outputs/backward_facing_step/: Backward Facing Step_Re=10.txt  Backward Facing Step_Re=10.vtk  Backward Facing Step_Re=100.txt  Backward Facing Step_Re=100.vtk  Backward Facing Step_Re=50.txt  Backward Facing Step_Re=50.vtk
outputs/convect_diff_quad_linear_up/: result_100x100.vtk  result_10x10.vtk  result_200x200.vtk  result_20x20.vtk  result_30x30.vtk  result_40x40.vtk  result_50x50.vtk
outputs/convect_diff_quad_upwind/: result_100x100.vtk  result_10x10.vtk  result_200x200.vtk  result_20x20.vtk  result_30x30.vtk  result_40x40.vtk  result_50x50.vtk
outputs/diffusion_quad/: result_100x100.vtk  result_10x10.vtk  result_200x200.vtk  result_20x20.vtk  result_30x30.vtk  result_40x40.vtk  result_50x50.vtk
outputs/diffusion_tri/: result_100x100.vtk  result_10x10.vtk  result_200x200.vtk  result_20x20.vtk  (+3 more)
python/: AttLengthBFS.py  BackwardFacingStepArmalys.py  KovasznayGraph.py  analyze.py  experiment.py  iterations.py  lidDrivenGhia.py  lidDrivenMain.py  liftDrag.py  magnitude.py  main.py  reference.py  solution.vtk  teste.py
reference/: benchmark_convective_diffusion.py  benchmark_diffusion.py
src/: BoundaryCondition.cpp  Convection.cpp  Diffusion.cpp  FVMSolver.cpp  GradientReconstruction.cpp  Mesh.cpp  NSSolver.cpp  NSSolver2.cpp  Orchestrator.cpp  ReFumSolver.cpp  Source.cpp
(+886 files in other folders)
